--- a/style.css
+++ b/style.css
@@ -1,51 +1,60 @@
-body{
-    background-color:#FAF6ED;
+body, h1, h2, ul, li, p, dd, dt, dl {
+    margin: 0px;
+    padding: 0px;
 }
-
-
-.grid-container{
-    display: grid;
-    grid-template-columns: 1fr 100px 2fr 1fr;
+  
+img {
+    display: block;
+    max-width: 100%;
 }
-
-section{
-    grid-column: 2/-1;
-}
-
-
-.cabecalho{
-    height: 80px;
-    width: 100%;
-    background-color: #fb5;
-    grid-column: 3/-1;
-    margin: 20px 0px;
-}
-
-.cabecalho ul{
-    display: flex;
-    flex-wrap: nowrap;
-    text-align: center;
-   
-
-}
-
-.cabecalho ul li{
+  
+ul {
     list-style: none;
-    padding: 10px;
-    text-align: center;
 }
-.cabecalho ul li a{
+  
+body {
+    box-sizing: border-box;
+    background: #faf6ed;
+    color: #222;
+    -webkit-font-smoothing: antialiased;
+    display: grid;
+    grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr;
+}
+ 
+.menu {
+    grid-column: 3/-1;
+    height: 50px;
+    background-color: #FFBB55;
+    margin: 20px 0px;
+    padding: 5px;
+}
+
+.menu ul{
+    display: flex;
+ 
+}
+
+.menu ul li {
+    padding: 15px;
+    
+}
+
+.menu ul li a {
     text-decoration: none;
     color: black;
-    text-transform: uppercase;
-    font-family: 'Azeret Mono', monospace;
-    font-weight: 500;
-    font-size: 1.7em;
-    letter-spacing: 1px;
+    font-size: 1.2em;
 }
 
-.introducao h1{
-    font-size: 8em;
+.grid-section {
+    grid-column: 2/4;
+    width: 100%;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 90px 300px 1fr;
+    gap: 20px;
+    margin-bottom: 4em;
+}
 
-    font-family: 'Azeret Mono', monospace;
+.titulo {
+    grid-column: 1/4;
 }
