--- a/style.css
+++ b/style.css
@@ -57,4 +57,66 @@ body {
 
 .titulo {
     grid-column: 1/4;
+    font-size: 8em;
 }
+
+
+.animais-lista{
+    grid-column: 2;
+    height: 370px;
+    display: block;
+    overflow-y: scroll;
+    cursor: pointer;
+}
+
+.animais-lista::-webkit-scrollbar-track{
+
+	background-color: #faf6ed;
+}
+
+.animais-lista::-webkit-scrollbar{
+	width: 15px;
+	background-color: #FFBB55;
+}
+
+.animais-lista::-webkit-scrollbar-thumb{
+	background-color: #FFBB55;
+    border: 3px #faf6ed solid;
+}
+
+.animais-descricao section{
+    display: none;
+}
+
+@keyframes aparece {
+    0% {
+        opacity: 0;
+        margin-left: -20px
+    }
+    100% {
+        opacity: 1;
+        margin-left: 0px;
+    }
+}
+
+.animais-descricao section.active{
+    display: block;
+    animation: aparece 0.4s ease-out forwards;
+}
+
+.animais-descricao section h2{
+    color: #EF6757;
+    text-transform: uppercase;
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.animais-descricao section h2::before{
+    display: inline-block;
+    content: "";
+    width: 40px;
+    height: 12px;
+    margin-right: 10px;
+    background-color: #FFBB55;
+}
+
